@@ -36,6 +36,8 @@ class GEvent;
 class GObservation;
 class GModel;
 class GFilename;
+class GVector;
+class GMatrixSparse;
 class GOptimizerPars;
 class GXml;
 
@@ -190,6 +192,8 @@ public:
     double         eval(const GEvent& event,
                         const GObservation& obs,
                         const bool& gradients = false) const;
+    GVector        eval(const GObservation& obs,
+                        GMatrixSparse*      gradients = NULL) const;
     std::string    print(const GChatter& chatter = NORMAL) const;
 
 protected:
